java/java-tests/testData/codeInsight/daemonCodeAnalyzer/quickFix/sealClass/failing/DifferentPackages.java
package p;

public class Pa<caret>rent {

}